# ffsubsync

./: .coveragerc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  verify_offset.py  versioneer.py
.github/workflows/: ci.yml
.serena/: project.yml
docs/: conf.py  gemini-subtitle-sync-plan.md
ffsubsync/: __init__.py  __main__.py  _version.py  aligners.py  constants.py  ffmpeg_utils.py  ffsubsync.py  file_utils.py  generic_subtitles.py  golden_section_search.py  preflight.py  sklearn_shim.py  speech_transformers.py  ssync.py  subtitle_parser.py  subtitle_transformers.py  ten_vad_onnx.py  version.py
ffsubsync/onnx_models/: README.md
ffsubsync/tools/: piecewise_sync.py
scripts/: anchor_spline_sync.py  anchor_sync.py  bump-version.py  write-version.py
test-data/: integration-testing-config.yaml  synchronized.srt  unsynchronized.srt
tests/: test_alignment.py  test_integration.py  test_misc.py  test_segmented_aligner.py  test_ssync.py  test_strategy_selection.py  test_subtitles.py  test_tenvad_backend.py
